--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
 *,
 *::after,
 *::before {
@@ -12,7 +14,7 @@ html {
 body {
     box-sizing: border-box;
     background-color: #D5E1EF;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Outfit', sans-serif;
 
 }
 
@@ -33,24 +35,28 @@ body {
 
 .qr-image {
     width: 100%;
-    border-radius: 1rem;
+    height: 300;
+    border-radius: 15px;
 }
 
 .heading {
     font-size: 2.3rem;
-    font-weight: bold;
+    font-weight: 700;
     text-align: center;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+    color: hsl(218, 44%, 22%);
     /* padding: 0rem 4rem; */
 }
 
 .detail {
     color: #9C9FA8;
-    font-size: 12px;
+    font-size: 18px;
     text-align: center;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    font-weight: 400;
+    color: hsl(220, 15%, 55%);
 }
 
 /* MOBILE */
